--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.38.0",
     "react-icons": "^4.4.0",
+    "react-paystack": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "yup": "^0.32.11"
   },
